# Agile-Robotics-for-Industrial-Automation

./: README.md
Basic_commands/group2/: CMakeLists.txt  package.xml
Basic_commands/group2/include/group2/: group_competitor.hpp
Basic_commands/group2/src/: group_competitor.cpp
Setup_of_the_environment/: CMakeLists.txt  package.xml
Setup_of_the_environment/include/group2/: group_competitor.hpp
Setup_of_the_environment/launch/: competitor.launch.py
Setup_of_the_environment/src/: group_competitor.cpp
challenges/group2/: CMakeLists.txt
challenges/group2/config/: sensors.yaml
challenges/group2/group2/: group2.py
challenges/group2/launch/: competitor.launch.py
challenges/group2/nodes/: zoro.py
challenges/group2/src/: competitor.cpp  my_manipulators.cpp
interacting_with_environment/group2/: README.txt  package.xml
interacting_with_environment/group2/include/group2/: group_competitor.hpp
interacting_with_environment/group2/src/: group_competitor.cpp
kitting_assembly/: README.txt
kitting_assembly/config/: rwa2_fast.yaml  sensors.yaml
kitting_assembly/etc/: instructions.txt
kitting_assembly/include/group2/: group_competitor.hpp
kitting_assembly/launch/: competitor.launch.py
kitting_assembly/nodes/: subscriber_py.py  zoro.py
kitting_assembly/src/: group_competitor.cpp
